@@ -5,10 +5,7 @@ VERSION=$(shell LC_ALL=C dpkg-parsechangelog | grep ^Version: | cut -d ' ' -f 2)
 DATE=$(shell echo $(VERSION) | cut -d '.' -f 1)
 DISTRIBUTION=$(shell LC_ALL=C dpkg-parsechangelog | grep ^Distribution: | cut -d ' ' -f 2)
 ifeq (${DISTRIBUTION},UNRELEASED)
-DISTRIBUTION=testing
-endif
-ifeq (${DISTRIBUTION},unstable)
-DISTRIBUTION=testing
+DISTRIBUTION=unstable
 endif
 
 ARCHIVEDIR=installer-$(ARCH)
