@@ -42,6 +42,7 @@ debian-installer (20040531) UNRELEASED; urgency=low
       scsi-modules on them. Make this happen only for the 2.6 kernel, using a
       nasty pkg-lists/kernel_specific technique since we lack dependency
       resolution in pkg-lists.
+    - Go back to pulling udebs from unstable when building official images.
   * Joshua Kwan
     - Fix sparc64 CDs for good. I think.
     - Change netcfg/use_dhcp to netcfg/disable_dhcp in manual.
